<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>Demo</groupId>
  <artifactId>DemoCucumber</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  
  
  
  
  
  
  
  
	<properties>
		<exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
		<maven-surefire-plugin.version>2.14</maven-surefire-plugin.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<cukes.version>1.1.1</cukes.version>
		<cucumber-html.version>0.2.3</cucumber-html.version>
		<gherkin.version>2.11.5</gherkin.version> 
		<cucumber.reporting.version>0.0.23</cucumber.reporting.version>
        <maven.cucumber.reporting.version>0.0.6</maven.cucumber.reporting.version>
	</properties>

	<repositories>
	    <repository>
	        <id>repo.bodar.com</id>
	        <url>http://repo.bodar.com</url>
	    </repository>
 
        <repository>
            <id>sonatype-releases</id>
            <url>https://oss.sonatype.org/content/repositories/releases/</url>
        </repository>
	</repositories>
	
	<dependencies>

 <dependency>
	<groupId>org.seleniumhq.selenium</groupId>
	<artifactId>selenium-firefox-driver</artifactId>
	<version>2.48.2</version>
</dependency>
	   <dependency>
	 <groupId>org.sikuli</groupId>
	 <artifactId>sikuli-api</artifactId>
	 <version>1.0.2</version>
     </dependency>
     
	   <!-- <dependency>
         <groupId>sikuli-script</groupId>
         <artifactId>sikuli-java</artifactId>
         <version>1.0</version>
         <systemPath>${basedir}/src/test/resources/Sikuli_Java/sikuli-java.jar</systemPath>
         <scope>system</scope>
      </dependency> -->
      
	   <dependency>
	   <groupId>com.pojosontheweb</groupId>
	   <artifactId>monte-repack</artifactId>
	   <version>1.0.1</version>
       </dependency>
	
	 <dependency>
	<groupId>org.seleniumhq.selenium</groupId>
	<artifactId>selenium-java</artifactId>
	<version>2.51.0</version>
      </dependency>
 
	
	  <!-- <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>1.1.7</version>
        </dependency> --> 
          <dependency>
	<groupId>info.cukes</groupId>
	<artifactId>cucumber-picocontainer</artifactId>
	<version>1.2.2</version>
       </dependency>
     
      <dependency>
        	<groupId>info.cukes</groupId>
        	<artifactId>cucumber-jvm</artifactId>
        	<version>1.1.7</version>
        	<type>pom</type>
        </dependency> 
        
      <!--  <dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.1.7</version>
		</dependency>-->
		
		   <dependency>
	<groupId>info.cukes</groupId>
	<artifactId>cucumber-junit</artifactId>
	<version>1.2.4</version>
        </dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-html</artifactId>
			<version>${cucumber-html.version}</version>
			<scope>test</scope>
		</dependency>

						         
         <dependency>
         	<groupId>org.hamcrest</groupId>
         	<artifactId>hamcrest-all</artifactId>
         	<version>1.3</version>
         </dependency>
         
         
		<!-- <dependency>
			<groupId>junit</groupId>
			<artifactId>junit-dep</artifactId>
			<version>4.8.1</version>
			<type>pom</type>
		</dependency> -->
		
		<dependency>
	<groupId>junit</groupId>
	<artifactId>junit</artifactId>
	<version>4.12</version>
      </dependency>
		<!--selenium -->

		<dependency>
	 <groupId>log4j</groupId>
	 <artifactId>log4j</artifactId>
	 <version>1.2.17</version>
      </dependency>
		
		<dependency>
	<groupId>org.seleniumhq.selenium</groupId>
	<artifactId>selenium-chrome-driver</artifactId>
	<version>2.47.1</version>
     </dependency>

<dependency>
	<groupId>org.seleniumhq.selenium</groupId>
	<artifactId>selenium-firefox-driver</artifactId>
	<version>2.51.0</version>
</dependency>

		<!-- 
        <dependency>
	  <groupId>org.seleniumhq.selenium</groupId>
	  <artifactId>selenium-server</artifactId>
	   <version>2.45.0</version>
       </dependency> -->

        
        <!-- <dependency>
        	<groupId>org.seleniumhq.selenium</groupId>
        	<artifactId>selenium-firefox-driver</artifactId>
        	<version>2.47.0</version>
        </dependency> -->

         <!-- SQLite -->
         <dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.7.2</version>
		</dependency>
                  
         <dependency>
	        <groupId>org.apache.maven.surefire</groupId>
	        <artifactId>surefire-junit47</artifactId>
	        <version>2.14</version>
	     </dependency>
	    
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>



		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>

        <dependency>
	    <groupId>com.beust</groupId>
	   <artifactId>jcommander</artifactId>
	  <version>1.48</version>
       </dependency>
        
        <dependency>
	<groupId>net.masterthought</groupId>
	<artifactId>cucumber-reporting</artifactId>
	<version>0.0.24</version>
       </dependency>
       
       <dependency>
	<groupId>net.masterthought</groupId>
	<artifactId>cucumber-sandwich</artifactId>
	<version>0.0.2</version>
       </dependency>
       
       <dependency>
			<groupId>com.googlecode.totallylazy</groupId>
			<artifactId>totallylazy</artifactId>
			<version>1077</version>
		</dependency>
		
		   <dependency>
           <groupId>net.masterthought</groupId>
          <artifactId>maven-cucumber-reporting</artifactId>
         <version>${maven.cucumber.reporting.version}</version>
         </dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>17.0</version>
		</dependency>	
	</dependencies>
	
	<build> 
	<pluginManagement>
		<plugins>
		
		 <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.6.1</version>
       <!--  <executions>
          <execution>
            <id>auto-clean</id>
            <phase>initialize</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions> -->
      </plugin>
			<plugin>
				<inherited>true</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>

				</configuration>
			</plugin>
             <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.7</version>
        <executions>
          <execution>
            <id>default-testResources</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>testResources</goal>
            </goals>
          </execution>
          <execution>
            <id>default-resources</id>
            <phase>process-resources</phase>
            <goals>
              <goal>resources</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
		 	<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>2.14</version>
			    <configuration>
                    <forkCount>7</forkCount>
                    <reuseForks>false</reuseForks>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx1024m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <useFile>false</useFile>
                    <includes>
                        <include>**/*RunnerClass.java</include>
                    </includes>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
			</plugin> 
			<!--  <plugin>
         <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
         <version>2.18.1</version>
          <configuration>
          <outputDirectory>${basedir}/target/newsite</outputDirectory>
          </configuration>
           </plugin>
           <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>2.1</version>
        <configuration>
          <outputDirectory>${basedir}/target/newsite</outputDirectory>
        </configuration>
           </plugin> --> 
            
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
                 <version>${maven.cucumber.reporting.version}</version>
                 <executions>
                     <execution>
                         <id>execution</id>
                         <phase>verify</phase>
                         <goals>
                             <goal>generate</goal>
                           
                         </goals>
                         <configuration>
                             <projectName>acceptance-tests</projectName>
                   <outputDirectory>${project.build.directory}/Cucumber-Maven-Reports</outputDirectory>

                    <cucumberOutput>${project.build.directory}/JsonReports/cucumber-reports.json</cucumberOutput>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
		</plugins>
        </pluginManagement>   
	</build>
    
</project>
	
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
